<resources>
    <string name="app_name">BudgetApp</string>
    <string name="budgeteer_logo">Budgeteer Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="login">Login</string>
    <string name="bar_graph_img">Bar graph img</string>
    <string name="dollar_sign_img">Dollar Sign img</string>
    <string name="pie_chart_img">Pie Chart img</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget_max">Budget Max</string>
    <string name="new_budget_category_name">Budget Category Name</string>
    <string name="add_new_budget">Add or Overwrite Budget</string>
    <string name="plus_sign_button">plus_sign_button</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="expense_category_name">Expense Category Name</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="remove_category">Remove a budget category</string>
    <string name="clear_list_of_budgets">Clear list of Budgets</string>
</resources>