<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="125dp"
    android:layout_width="400dp"
    android:padding="5dp"
    android:background="@drawable/adder_box"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/add_new_expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/add_new_expense"
        android:textStyle="bold"
        android:textColor="@color/logo_yellow"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/expense_category_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/logo_yellow"
        android:textColorHint="@color/logo_yellow"
        android:layout_below="@id/add_new_expense_title"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:hint="@string/expense_category_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/amount_spent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/logo_yellow"
        android:textColorHint="@color/logo_yellow"
        android:layout_below="@id/expense_category_name"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:hint="@string/amount_spent"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/add_expense_btn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/add_invert"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:contentDescription="@string/plus_sign_button" />
</RelativeLayout>
