<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/budgeteer_logo" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="@dimen/form_width"
        android:layout_height="@dimen/form_height"

        android:alpha="0"
        style="@style/FormStyle"
        android:background="@drawable/rounded_edittext_bg"
        android:paddingStart="@dimen/pad_text"
        android:paddingEnd="@dimen/end_pad"
        android:textSize="@dimen/pad_text"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintBottom_toTopOf="@id/password_field"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:autofillHints="Username"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="@dimen/form_width"
        android:layout_height="@dimen/form_height"

        android:alpha="0"
        style="@style/FormStyle"
        android:background="@drawable/rounded_edittext_bg"
        android:paddingStart="@dimen/pad_text"
        android:paddingEnd="@dimen/end_pad"
        android:textSize="@dimen/pad_text"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="300sp"
        android:autofillHints="Password"
        android:inputType="textPassword"
        tools:ignore="LabelFor"
        />

    <Button
        android:id="@+id/account_create_btn"
        android:layout_width="200sp"
        android:layout_height="50sp"

        android:alpha="0"
        android:background="@drawable/rounded_edittext_bg"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        android:layout_marginStart="150sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        android:layout_marginTop="@dimen/top_margin"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200sp"
        android:layout_height="50sp"

        android:alpha="0"
        android:background="@drawable/rounded_edittext_bg"
        android:text="@string/login"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        android:layout_marginEnd="150sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        />




</androidx.constraintlayout.widget.ConstraintLayout>