<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="1125sp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        />

    <ImageButton
        android:id="@+id/budget_view_btn"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/rounded_main_btn_invert"
        android:src="@drawable/tiny_pig"
        app:layout_constraintWidth_percent="0.333"

        app:layout_constraintTop_toBottomOf="@id/fragment_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_view_btn"
        android:contentDescription="@string/dollar_sign_img"
    />


    <ImageButton
        android:id="@+id/add_view_btn"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/rounded_main_btn"
        android:src="@drawable/add_invert"
        app:layout_constraintWidth_percent="0.333"


        app:layout_constraintTop_toBottomOf="@id/fragment_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/budget_view_btn"
        app:layout_constraintRight_toLeftOf="@id/chart_view_btn"
        android:contentDescription="@string/bar_graph_img" />

    <ImageButton
        android:id="@+id/chart_view_btn"
        android:layout_width="0dp"
        android:layout_height="150sp"
        android:background="@drawable/rounded_main_btn"
        android:src="@drawable/tiny_pie_invert"
        app:layout_constraintWidth_percent="0.333"

        app:layout_constraintTop_toBottomOf="@id/fragment_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/add_view_btn"
        android:contentDescription="@string/pie_chart_img"
        />


</androidx.constraintlayout.widget.ConstraintLayout>